syntax = "proto3";
package pb;

option go_package = "./pb";

message EnumMessage{
    int32 id = 1;
    Gender gender = 2;
}


enum Gender{
    option allow_alias = true;
    NOT_SPECIFIED = 0;
    WOMAN = 1;
    MAN = 2;
    FEMALE = 1;
    MALE = 2;
}