syntax = "proto3";

package pb;
option go_package="./pb";

message Person{
    int32 id=1;
    bool is_adult = 2;
    string name = 3;
    repeated int32 lucky_numbers=4;
}